Finish hero div

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Landing Page</title>
+    <title>Razvan Rotundu</title>
 </head>
 <body>
     <div class="header">
@@ -17,11 +17,10 @@
         </div>
     </div>
     <div class="hero">
-
-        <div class="pic">
+        <div class="picContainer">
+            <img alt="Razvan's profile pic" src="images/tempPfp.jpg">
         </div>
-        
-        <div class="text">
+        <div class="textContainer">
             <div class="heromain">Razvan Rotundu</div>
             <div class="jobTitle">Aspiring software dev</div>
             <div class="herosecond">
@@ -72,7 +71,7 @@
 
     </div>
     <footer>
-        <p>Copyright The Odin Project 2024</p>
+        <p>Copyright Razvan Rotundu 2024</p>
     </footer>
     
 </body>
