--- a/index.html
+++ b/index.html
@@ -35,20 +35,34 @@
         <div class="infoheader">Proficiencies</div>
         <div class="cardstack">
             <div class="card">
-                <div class="cardimage">Java Image</div>
-                <Div class="cardtext">Java skill description</Div>
+                <div class="cardimage">
+                    <img alt="Java logo" src="images/skills/java-original.svg">
+                </div>
+                <div class="cardtext">Java skill description</Div>
             </div>
             <div class="card">
-                <div class="cardimage">Spring Image</div>
+                <div class="cardimage">
+                    <img alt="Spring logo" src="images/skills/spring-original.svg">
+                </div>
                 <Div class="cardtext">Spring Image description</Div>
             </div>
             <div class="card">
-                <div class="cardimage">Java Swing Image</div>
-                <Div class="cardtext">Java Swing Image description</Div>
+                <div class="cardimage">
+                    <img alt="Html logo" src="images/skills/html5-original.svg">
+                </div>
+                <Div class="cardtext">Html Description</Div>
             </div>
             <div class="card">
-                <div class="cardimage">Html/Css Image </div>
-                <Div class="cardtext">Html/Css Description</Div>
+                <div class="cardimage">
+                    <img alt="Css logo" src="images/skills/css3-original.svg">
+                </div>
+                <Div class="cardtext">CSS Description</Div>
+            </div>
+                        <div class="card">
+                <div class="cardimage">
+                    <img alt="Linux logo" src="images/skills/linux-original.svg">
+                </div>
+                <Div class="cardtext">Linux Image description</Div>
             </div>
         </div>
     </div>
