fix proficiency styling + add links

--- a/index.html
+++ b/index.html
@@ -35,39 +35,51 @@
         <div class="infoheader">Proficiencies</div>
         <div class="cardstack">
             <div class="card">
-                <div class="cardimage">
-                    <img alt="Java logo" src="images/skills/java-original.svg">
-                </div>
+                <a href="">
+                    <div class="cardimage">
+                        <img alt="Java logo" src="images/skills/java-original.svg">
+                    </div>
+                </a>
                 <div class="cardtext">Java skill description</Div>
             </div>
             <div class="card">
-                <div class="cardimage">
-                    <img alt="Spring logo" src="images/skills/spring-original.svg">
-                </div>
+                <a href="">
+                    <div class="cardimage">
+                        <img alt="Spring logo" src="images/skills/spring-original.svg">
+                    </div>
+                </a>
                 <Div class="cardtext">Spring Image description</Div>
             </div>
             <div class="card">
-                <div class="cardimage">
-                    <img alt="Html logo" src="images/skills/html5-original.svg">
-                </div>
+                <a href="">
+                    <div class="cardimage">
+                        <img alt="Html logo" src="images/skills/html5-original.svg">
+                    </div>
+                </a>
                 <Div class="cardtext">Html Description</Div>
             </div>
             <div class="card">
-                <div class="cardimage">
-                    <img alt="Css logo" src="images/skills/css3-original.svg">
-                </div>
+                <a href="">
+                    <div class="cardimage">
+                        <img alt="Css logo" src="images/skills/css3-original.svg">
+                    </div>
+                </a>
                 <Div class="cardtext">CSS Description</Div>
             </div>
-                        <div class="card">
-                <div class="cardimage">
-                    <img alt="Linux logo" src="images/skills/linux-original.svg">
-                </div>
+            <div class="card">
+                <a href="">
+                    <div class="cardimage">
+                        <img alt="Linux logo" src="images/skills/linux-original.svg">
+                    </div>
+                </a>
                 <Div class="cardtext">Linux Image description</Div>
             </div>
         </div>
     </div>
     <div class="testimonial">
+        
         <div class="infoheader">Projects</div>
+
         <div class="projectEntry">
             <div class="projectHead">
                 <p class="projectTitle">ProjectTitle</p>
