add project descriptions and bio

--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
     <!-- Hero contains profile picture and desctiption -->
     <div class="hero">
         <div class="picContainer">
-            <img alt="Razvan's profile pic" src="images/tempPfp.jpg">
+            <img alt="Razvan's profile pic" src="images/Raz_pfp.jpg">
         </div>
         <div class="textContainer">
             <div class="heromain">Razvan Rotundu</div>
             <div class="jobTitle">Aspiring software dev</div>
             <div class="herosecond">
                 <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    Hi! I am a recent graduate of Western University with a Bachelor of Science in Computer Science. I am passionate about software development, with a strong focus on Java and backend technologies, and a growing interest in artificial intelligence.
+                </p>
+                <p>Throughout my studies and personal learning, I’ve completed several Java-based projects that demonstrate my commitment to building practical, real-world software. 
+                    These projects include a fully functional tree walk interpreter, a student management system using MVC and Spring's dependency injection, and desigining a RESTful API endpoint using Spring Boot and HATEOAS principles.
                 </p>
             </div>
         </div>
@@ -47,7 +50,7 @@
                         <img alt="Java logo" src="images/skills/java-original.svg">
                     </div>
                 </a>
-                <div class="cardtext">Java skill description</Div>
+                <div class="cardtext">Java</Div>
             </div>
             <div class="card">
                 <a href="">
@@ -55,23 +58,23 @@
                         <img alt="Spring logo" src="images/skills/spring-original.svg">
                     </div>
                 </a>
-                <Div class="cardtext">Spring Image description</Div>
+                <Div class="cardtext">Spring Framework</Div>
             </div>
             <div class="card">
                 <a href="">
                     <div class="cardimage">
-                        <img alt="Html logo" src="images/skills/html5-original.svg">
+                        <img alt="Html logo" src="images/skills/ruby-original.svg">
                     </div>
                 </a>
-                <Div class="cardtext">Html Description</Div>
+                <Div class="cardtext">Ruby</Div>
             </div>
             <div class="card">
                 <a href="">
                     <div class="cardimage">
-                        <img alt="Css logo" src="images/skills/css3-original.svg">
+                        <img alt="Css logo" src="images/skills/cplusplus-original.svg">
                     </div>
                 </a>
-                <Div class="cardtext">CSS Description</Div>
+                <Div class="cardtext">C++</Div>
             </div>
             <div class="card">
                 <a href="">
@@ -79,7 +82,7 @@
                         <img alt="Linux logo" src="images/skills/linux-original.svg">
                     </div>
                 </a>
-                <Div class="cardtext">Linux Image description</Div>
+                <Div class="cardtext">Linux/Unix Systems</Div>
             </div>
         </div>
     </div>
@@ -91,16 +94,16 @@
 
         <div class="projectEntry">
             <div class="projectHead">
-                <div class="projectTitle">ProjectTitle</div>
-                <div class="projectLanguages">Java, Java, Java</div>
+                <div class="projectTitle">Payroll RESTful Web Service</div>
+                <div class="projectLanguages">Java, Spring Boot</div>
                 <a class = "projectLink"><img class = "smallImg" alt="little github logo" src="images/github-project.svg"></a>
             </div>
             <div class="projectDesc">
                 <ul>
-                    <li>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system,</li>
-                    <li>and expound the actual teachings of the great explorer of the truth,</li>
-                    <li>the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful.</li>
-                    <li>Nor again is there anyone who loves or pursues or desires to obtain pain of</li>
+                    <li>Developed a RESTful web service using Spring Boot based on the official Spring.io tutorial, reinforcing core concepts of web API development.</li>
+                    <li>Implemented HTTP endpoints for CRUD operations on resources using REST principles and Spring MVC.</li>
+                    <li>Utilized Spring Boot's auto-configuration and embedded server to rapidly develop and test the service with minimal boilerplate.</li>
+                    <li>Applied HATEOAS principles to enhance API discoverability and client navigation through hypermedia links.</li>
                 </ul>
             </div>
         </div>
@@ -108,16 +111,16 @@
         
         <div class="projectEntry">
             <div class="projectHead">
-                <div class="projectTitle">ProjectTitle</div>
-                <div class="projectLanguages">Java, Java, Java</div>
+                <div class="projectTitle">Class Roster Management System</div>
+                <div class="projectLanguages">Java, Spring</div>
                 <a class = "projectLink"><img class = "smallImg" alt="little github logo" src="images/github-project.svg"></a>
             </div>
             <div class="projectDesc">
                 <ul>
-                    <li>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system,</li>
-                    <li>and expound the actual teachings of the great explorer of the truth,</li>
-                    <li>the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful.</li>
-                    <li>Nor again is there anyone who loves or pursues or desires to obtain pain of</li>
+                    <li>Built a modular, command-line student management system using Java and the Spring Framework to demonstrate enterprise application design patterns.</li>
+                    <li>Applied Spring's dependency injection (DI) and inversion of control (IoC) to decouple components and promote testability and maintainability.</li>
+                    <li>Structured the application using MVC architecture and layered design, separating concerns across service, controller, and DAO layers.</li>
+                    <li>Leveraged Spring’s ApplicationContext and annotations/XML configuration for managing bean lifecycle and object dependencies.</li>
                 </ul>
             </div>
         </div>
@@ -125,16 +128,20 @@
 
         <div class="projectEntry">
             <div class="projectHead">
-                <div class="projectTitle">ProjectTitle</div>
-                <div class="projectLanguages">Java, Java, Java</div>
+                <div class="projectTitle">Lox Interpreter</div>
+                <div class="projectLanguages">Java </div>
                 <a class = "projectLink"><img class = "smallImg" alt="little github logo" src="images/github-project.svg"></a>
             </div>
             <div class="projectDesc">
                 <ul>
-                    <li>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system,</li>
-                    <li>and expound the actual teachings of the great explorer of the truth,</li>
-                    <li>the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful.</li>
-                    <li>Nor again is there anyone who loves or pursues or desires to obtain pain of</li>
+                    <li>Built a fully functional tree-walk interpreter for the Lox programming language in Java by following the first half of Crafting Interpreters by Bob Nystrom.</li>
+                    <li>Implemented a recursive descent parser, lexical scanner, and runtime environment supporting variables, control flow, functions, and scoping.</li>
+                    <li>Designed and maintained a token stream, abstract syntax tree (AST), and visitor-based evaluation model to execute Lox programs.</li>
+                    <li>Developed error handling for both compile-time and runtime issues, including lexical errors, parser synchronization, and runtime exceptions.</li>
+                    <li>Built a fully functional tree-walk interpreter for the Lox programming language in Java by following the first half of Crafting Interpreters by Bob Nystrom.</li>
+                    <li>Implemented a recursive descent parser, lexical scanner, and runtime environment supporting variables, control flow, functions, and scoping.</li>
+                    <li>Designed and maintained a token stream, abstract syntax tree (AST), and visitor-based evaluation model to execute Lox programs.</li>
+                    <li>Developed error handling for both compile-time and runtime issues, including lexical errors, parser synchronization, and runtime exceptions.</li>
                 </ul>
             </div>
         </div>
@@ -142,16 +149,17 @@
 
         <div class="projectEntry">
             <div class="projectHead">
-                <div class="projectTitle">ProjectTitle</div>
-                <div class="projectLanguages">Java, Java, Java</div>
+                <div class="projectTitle">Text Editor (Team Project)</div>
+                <div class="projectLanguages">Java, Swing</div>
                 <a class = "projectLink"><img class = "smallImg" alt="little github logo" src="images/github-project.svg"></a>
             </div>
             <div class="projectDesc">
                 <ul>
-                    <li>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system,</li>
-                    <li>and expound the actual teachings of the great explorer of the truth,</li>
-                    <li>the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful.</li>
-                    <li>Nor again is there anyone who loves or pursues or desires to obtain pain of</li>
+                    <li>Collaborated in a team of five to develop a GUI-based text editor using Java and Swing, implementing features such as file I/O, formatting, and spell-check support.</li>
+                    <li>Designed and implemented a Damerau-Levenshtein distance algorithm to suggest corrections for misspelled words based on edit distance.</li>
+                    <li>Contributed to overall codebase via Git, participating in peer code reviews, version control, and agile-style task planning.</li>
+                    <li>Ensured algorithm efficiency to maintain responsiveness for large input texts, optimizing performance-critical components.</li>
+                    <li>Gained experience in software collaboration, interface design with Swing, and algorithmic problem solving in a real-world application.</li>
                 </ul>
             </div>
         </div>
@@ -159,16 +167,17 @@
 
         <div class="projectEntry">
             <div class="projectHead">
-                <div class="projectTitle">ProjectTitle</div>
-                <div class="projectLanguages">Java, Java, Java</div>
+                <div class="projectTitle">Chess </div>
+                <div class="projectLanguages">Ruby</div>
                 <a class = "projectLink"><img class = "smallImg" alt="little github logo" src="images/github-project.svg"></a>
             </div>
             <div class="projectDesc">
                 <ul>
-                    <li>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system,</li>
-                    <li>and expound the actual teachings of the great explorer of the truth,</li>
-                    <li>the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful.</li>
-                    <li>Nor again is there anyone who loves or pursues or desires to obtain pain of</li>
+                    <li>Developed a fully functional command-line chess game in Ruby, supporting all core gameplay mechanics and rules (check, checkmate, castling, en passant, pawn promotion).</li>
+                    <li>Implemented object-oriented design principles to model pieces, board state, and game flow using classes and inheritance.</li>
+                    <li>Applied serialization using YAML to allow saving and loading of game states, enabling session persistence.</li>
+                    <li>Built custom validation logic to enforce legal moves and game rules without external libraries.</li>
+                    <li>Employed version control with Git throughout the development process; practiced iterative development and debugging.</li>
                 </ul>
             </div>
         </div>
