fix mobile scaling issue with icons on mobile

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <img alt="Spring logo" src="images/skills/spring-original.svg">
                     </div>
                 </a>
-                <Div class="cardtext">Spring Framework</Div>
+                <Div class="cardtext">Spring</Div>
             </div>
             <div class="card">
                 <a href="#cpp_example">
