fix home button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Button follows user and sends page back to top -->
-     <button onclick="topFunction()" id="homeButton" title="Return to top"><img alt="home button" src="images/home.svg"></button>
+     <button id="homeButton" title="Return to top"><img alt="home button" src="images/home.svg"></button>
 
     <!-- Header displays phone number, email, github and linkedin -->
     <div class="header" id="home">
