Fix typo in Lox project

--- a/index.html
+++ b/index.html
@@ -149,11 +149,7 @@
             </div>
             <div class="projectDesc">
                 <ul>
-                    <li>Built a fully functional tree-walk interpreter for the Lox programming language in Java by following the first half of <a href="http://www.craftinginterpreters.com/">Crafting Interpreters</a> by Bob Nystrom.</li>
-                    <li>Implemented a recursive descent parser, lexical scanner, and runtime environment supporting variables, control flow, functions, and scoping.</li>
-                    <li>Designed and maintained a token stream, abstract syntax tree (AST), and visitor-based evaluation model to execute Lox programs.</li>
-                    <li>Developed error handling for both compile-time and runtime issues, including lexical errors, parser synchronization, and runtime exceptions.</li>
-                    <li>Built a fully functional tree-walk interpreter for the Lox programming language in Java by following the first half of Crafting Interpreters by Bob Nystrom.</li>
+                    <li>Built a fully functional tree-walk interpreter for the Lox programming language in Java by following the first half of <a href="http://www.craftinginterpreters.com/">Crafting Interpreters</a> by Robert Nystrom.</li>
                     <li>Implemented a recursive descent parser, lexical scanner, and runtime environment supporting variables, control flow, functions, and scoping.</li>
                     <li>Designed and maintained a token stream, abstract syntax tree (AST), and visitor-based evaluation model to execute Lox programs.</li>
                     <li>Developed error handling for both compile-time and runtime issues, including lexical errors, parser synchronization, and runtime exceptions.</li>
