--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="projectDesc">
                 <ul>
                     <li>Built a modular, command-line student management system using Java and the Spring Framework to demonstrate enterprise application design patterns.</li>
-                    <li>Applied Spring's dependency injection (DI) and inversion of control (IoC) to decouple components and promote testability and maintainability.</li>
+                    <li>Applied Spring's dependency injection and inversion of control to decouple components and promote testability and maintainability.</li>
                     <li>Structured the application using MVC architecture and layered design, separating concerns across service, controller, and DAO layers.</li>
                     <li>Leveraged Spring’s ApplicationContext and annotations/XML configuration for managing bean lifecycle and object dependencies.</li>
                 </ul>
@@ -151,7 +151,7 @@
                 <ul>
                     <li>Built a fully functional tree-walk interpreter for the Lox programming language in Java by following the first half of <a href="http://www.craftinginterpreters.com/">Crafting Interpreters</a> by Robert Nystrom.</li>
                     <li>Implemented a recursive descent parser, lexical scanner, and runtime environment supporting variables, control flow, functions, and scoping.</li>
-                    <li>Designed and maintained a token stream, abstract syntax tree (AST), and visitor-based evaluation model to execute Lox programs.</li>
+                    <li>Designed and maintained a token stream, abstract syntax tree, and visitor-based evaluation model to execute Lox programs.</li>
                     <li>Developed error handling for both compile-time and runtime issues, including lexical errors, parser synchronization, and runtime exceptions.</li>
                 </ul>
             </div>
@@ -169,7 +169,7 @@
                 <ul>
                     <li>Developed a fully functional command-line chess game in Ruby, supporting all core gameplay mechanics and rules (check, checkmate, castling, en passant, pawn promotion).</li>
                     <li>Implemented object-oriented design principles to model pieces, board state, and game flow using classes and inheritance.</li>
-                    <li>Applied serialization using YAML to allow saving and loading of game states, enabling session persistence.</li>
+                    <li>Applied serialization using JSON to allow saving and loading of game states, enabling session persistence.</li>
                     <li>Built custom validation logic to enforce legal moves and game rules without external libraries.</li>
                     <li>Employed version control with Git throughout the development process; practiced iterative development and debugging.</li>
                 </ul>
@@ -198,7 +198,7 @@
 
         <div class="projectEntry" id="cpp_example">
             <div class="projectHead">
-                <div class="projectTitle">Bitbuddy (Team)</div>
+                <div class="projectTitle">Bitbuddy (Team Project)</div>
                 <div class="projectLanguages">C++, QT</div>
                 <a class = "projectLink"  href="https://github.com/Raz-Rotundu/BitBuddy">
                     <img class = "smallImg clickable" alt="little github logo" src="images/github-project.svg">
@@ -208,7 +208,7 @@
                 <ul>
                     <li>Collaborated in a team to design and develop a “Tamagotchi-like” desktop application in C++, featuring an interactive virtual pet with a custom GUI built using the Qt framework.</li>
                     <li>Used Git for version control, managing feature branches and coordinating parallel development to streamline collaboration and reduce merge conflicts.</li>
-                    <li>Designed and implemented a fully functional Tic-Tac-Toe minigame, including AI-based computer opponents with varying difficulty levels.</li>
+                    <li>Designed and implemented a fully functional Tic-Tac-Toe minigame, including AI-based computer opponents.</li>
                     <li>Contributed to UI development, game logic, and project planning, gaining experience in C++ event-driven programming and real-time application behavior.</li>
                     <li>Strengthened understanding of GUI application architecture, cross-platform development, and team-based software engineering.</li>
                 </ul>
@@ -235,7 +235,7 @@
 
     </div>
     <footer>
-        <p>Copyright Razvan Rotundu 2024</p>
+        <p>Copyright Razvan Rotundu 2025</p>
     </footer>
     
 </body>
