Add Attention and Traffic python projects

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <div class="jobTitle">Aspiring software dev</div>
             <div class="biosecond">
                 <p>
-                    I’m Computer Science graduate from the University of Western Ontario, having graduated in 2024. I have foundational knowledge of data structures and algorithms, object-oriented design patterns, and software development tools like Git and Jira.
-                </p>
-                I’ve worked mainly with Java and C++, but also know a bit of Ruby, HTML/CSS/JavaScript. Since graduating I’ve been continuing my personal studies through a series of independent projects. I am passionate about technology and am currently looking to start my career in software development.
-                <p>
+                    I’m Computer Science graduate from the University of Western Ontario, having graduated in 2024.
+                    I have foundational knowledge of data structures and algorithms, object-oriented design patterns, and software development tools like Git and Jira.
+                    I’ve worked mainly with Java and C++, but also know a bit of Ruby, HTML/CSS/JavaScript. Since graduating I’ve been continuing my personal studies through a series of independent projects.
+                    I'm passionate about technology and am currently looking to start my career in software development.
                 </p>
             </div>
         </div>
@@ -213,7 +213,7 @@
         </div>
             <div class="projectEntry darker" id="python_example">
             <div class="projectHead">
-                <div class="projectTitle">Shopping</div>
+                <div class="projectTitle">Shopping.py</div>
                 <div class="projectLanguages">Python, Scitkit-learn, Numpy</div>
                 <a class="projectLink" href="https://github.com/Raz-Rotundu/shopping">
                     <img class="smallImg clickable" alt="little github logo" src="images/github-project.svg">
@@ -225,6 +225,39 @@
                         <li>Used Scikit-learn to segregate dataset into training and test sets.</li>
                         <li>Used Scikit-Learn to train model and evaluate output.</li>
                         <li>Based on the data set of <a href="https://link.springer.com/article/10.1007/s00521-018-3523-0">Sakar et al.</a></li>
+                    </ul>
+            </div>
+        </div>
+
+        <div class="projectEntry" id="TrafficPy">
+            <div class="projectHead">
+                <div class="projectTitle">Traffic.py</div>
+                <div class="projectLanguages">Python, TensorFlow, Numpy</div>
+                <a class="projectLink"  href="https://github.com/Raz-Rotundu/PersonalRepo/tree/master/Cs50/AI%20projects/traffic">
+                    <img class="smallImg clickable" alt="little github logo" src="images/github-project.svg">
+                </a>
+            </div>
+            <div class="projectDesc">
+                <ul>
+                    <li>Developed an image classification neural network for traffic sign recognition.</li>
+                    <li>Stored and processed dataset using NumPy.</li>
+                    <li>Used TensorFlow to generate a convolutional neural network model trained on the German Traffic Sign Recognition Benchmark (GTSRB) dataset.</li>
+                </ul>
+            </div>
+        </div>
+            <div class="projectEntry darker" id="AttentionPy">
+            <div class="projectHead">
+                <div class="projectTitle">Attention.py</div>
+                <div class="projectLanguages">Python, Scitkit-learn, Numpy</div>
+                <a class="projectLink" href="https://github.com/Raz-Rotundu/PersonalRepo/tree/master/Cs50/AI%20projects/attention">
+                    <img class="smallImg clickable" alt="little github logo" src="images/github-project.svg">
+                </a>
+            </div>
+            <div class="projectDesc">
+                    <ul>
+                        <li>Developed a language model to predict a masked word in a sentence.</li>
+                        <li>Used Google’s transformer-based BERT language model to generate word predictions.</li>
+                        <li>Implemented feature to visualize each language model attention head.</li>
                     </ul>
             </div>
         </div>
